updating FE use guide and updated endpoints and logic for user management
