# handlers/users/types/users-request.types.ts
@@ -4,10 +4,14 @@ export interface CreateUserRequest {
   email: string;
   password: string;
   role?: UserRole;
+  firstName?: string;
+  lastName?: string;
 }
 
 export interface UpdateUserRequest {
-  role: UserRole;
+  role?: UserRole;
+  firstName?: string;
+  lastName?: string;
 }
 
 export interface ResetPasswordRequest {
@@ -17,6 +21,8 @@ export interface ResetPasswordRequest {
 export interface CognitoUser {
   username: string;
   email: string;
+  firstName?: string;
+  lastName?: string;
   status: string;
   enabled: boolean;
   role: UserRole | null;
